--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:authorities="com.gmail.maloef.rememberme"
+            android:name=".persistence.generated.VocabularyBoxProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
