--- a/RememberMe/app/src/debug/AndroidManifest.xml
+++ b/RememberMe/app/src/debug/AndroidManifest.xml
@@ -6,6 +6,6 @@
 
     <application
         tools:replace="android:name"
-        android:name=".DebugApplication"/>
+        android:name=".DebugRememberMeApplication"/>
 
 </manifest>
