--- a/RememberMe/app/build.gradle
+++ b/RememberMe/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     compile 'com.google.dagger:dagger:2.0.2'
     apt "com.google.dagger:dagger-compiler:2.0.2"
+    // prevents NPE during compile when dagger is used
+    provided 'javax.annotation:jsr250-api:1.0'
 
     compile 'net.simonvt.schematic:schematic:0.6.4'
     apt 'net.simonvt.schematic:schematic-compiler:0.6.4'
