--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.maloef.rememberme">
 
+    <!--<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
