--- a/RememberMe/app/build.gradle
+++ b/RememberMe/app/build.gradle
@@ -18,6 +18,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'ANDROID_TRANSLATE_API_KEY', AndroidTranslateApiKey
+        // used for tests
+        it.buildConfigField 'String', 'SERVER_TRANSLATE_API_KEY', ServerTranslateApiKey
+    }
 }
 
 dependencies {
@@ -25,6 +30,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:gridlayout-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
     compile 'com.venmo.cursor:library:0.4'
     compile 'com.jakewharton:butterknife:7.0.1'
