Back on the right track: separate service for loading language names. Tests run, app starts.

--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <provider
             android:authorities="com.gmail.maloef.rememberme"
-            android:name=".persistence.generated.VocabularyBoxProvider"
+            android:name=".persistence.generated.RememberMeProvider"
             android:exported="false" />
     </application>
 
