--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.gmail.maloef.rememberme">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--<uses-permission android:name="android.permission.GET_ACCOUNTS" />-->
 
-    <!--<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -37,6 +35,7 @@
             android:authorities="com.gmail.maloef.rememberme"
             android:name=".persistence.generated.RememberMeProvider"
             android:exported="false" />
+        <service android:name=".service.LanguageUpdateService" android:exported="false" />
     </application>
 
 </manifest>
