--- a/RememberMe/app/build.gradle
+++ b/RememberMe/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:gridlayout-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 
     // There seems to be a client lib for google translate, but the documentation is bad, and maybe it's not even official.
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
