--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddWordActivity"
+            android:name=".WordActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
