repeat functionality basically works

--- a/RememberMe/app/build.gradle
+++ b/RememberMe/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     compile 'net.simonvt.schematic:schematic:0.6.4'
     apt 'net.simonvt.schematic:schematic-compiler:0.6.4'
 
+    compile 'com.hannesdorfmann.fragmentargs:annotation:3.0.2'
+    apt 'com.hannesdorfmann.fragmentargs:processor:3.0.2'
+
     debugCompile 'com.facebook.stetho:stetho:1.2.0'
     debugCompile 'com.facebook.stetho:stetho-okhttp:1.2.0'
 
