--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -22,7 +22,6 @@
         </activity>
         <activity
             android:name=".WordActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -34,11 +33,10 @@
             android:name=".MemorizeActivity"
             android:label="@string/memorize"
             android:theme="@style/AppTheme.NoActionBar">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.SEND" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<data android:mimeType="text/plain" />-->
-            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name=".WordListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <provider
             android:authorities="com.gmail.maloef.rememberme"
