--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".WordListActivity"
+            android:name=".wordlist.WordListActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <provider
