fix problems with twoPaneLayout

--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -19,10 +19,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".word.WordActivity"
-            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -30,7 +26,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MemorizeActivity"
+            android:name=".word.WordActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".memorize.MemorizeActivity"
             android:label="@string/memorize"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
