--- a/RememberMe/app/src/main/AndroidManifest.xml
+++ b/RememberMe/app/src/main/AndroidManifest.xml
@@ -42,6 +42,13 @@
             android:authorities="com.gmail.maloef.rememberme"
             android:name=".persistence.generated.RememberMeProvider"
             android:exported="false" />
+        <receiver android:name=".widget.RememberMeWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/widget_info" />
+        </receiver>
+        <service android:name=".widget.UpdateWidgetIntentService" />
     </application>
 
 </manifest>
